--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Saju Mulakkal Joseph - Index</title>
+  <title>Rosemol Saju - Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -40,11 +40,10 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Saju Mulakkal</a></h1>
+        <h1 class="text-light"><a href="index.html">Rosemol Saju</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://wa.me/6598627561" class="twitter"><i class="bx bxl-whatsapp"></i></a>
+          <a href="https://wa.me/6580343546" class="twitter"><i class="bx bxl-whatsapp"></i></a>
           <a href="https://www.facebook.com/saju.m.joseph" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.linkedin.com/in/sajumulakkal/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -67,8 +66,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Saju Mulakkal Joseph</h1>
-      <p> I'm a <span class="typed" data-typed-items="Business Analyst, Solution Architect, Platform & Application Support Expert, Data  Analyst, UX Engineer"></span></p>
+      <h1>Rosemol Saju	</h1>
+      <p> I'm a <span class="typed" data-typed-items="Young Learner,  UX Engineer, Web developer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -81,7 +80,7 @@
         <div class="section-title">
           <h2>About </h2>
           <p>
-          Technology Expert with specialization in Application & Infrastructure Support, proficient at delivering solutions with a collaborative and partnership (24 years of experience in Financial Systems management,Infrastructure and Application Operations) Results-oriented IT professional with extensive exposure in Continues Process Improvement, Operations Transformation, Incident & Change Management Rich experience in Investment Banking software applications in Equities trading & Research Publication
+          I am learning Skills on Web Development, Datat Analysis and UX Buding
           </p>
         </div>
 
@@ -96,16 +95,16 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> sajumulakkal.netlify.app</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +65 98627561</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> rosemol.netlify.app</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +65 80343546</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Singapore</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> sajumulakkal@hotmail.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Currently Tied-up </li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Singapore -Cambridge A level Graduate</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> rosemolsaju05@gmail.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong>in progress </li>
                 </ul>
               </div>
             </div>
@@ -463,50 +462,6 @@ Decentralized Finance (DeFi) Opportunities and Risks</td></tr>
        </div>
 
 
-	    <div class="proj-box-format">
-	        <iframe src="https://slabs-react-burger.netlify.app/" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen align="middle" seamless></iframe>
-	    </div>
-	    <div class="proj-box-format">
-			    	<a href="https://slabs-react-burger.netlify.app/" target="_blank">Click Me Here for "Burger Order", Website was build using REACT and FIREBASE</a>
-		</div>
-
-	    <div class="proj-box-format">
-	        <iframe src="https://slabs-blockchain-kunjali-marakar.netlify.app/" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen align="middle" seamless></iframe>
-	    </div>
-	    <div class="proj-box-format">
-			    	<a href="https://slabs-blockchain-kunjali-marakar.netlify.app/" target="_blank">Click Here for "Kunjali Marakar", Website was build using EOSIO TESTNET BLOCK CHAIN and REACT </a>
-
-			    	<p>Account Name :   rjzkokcjgeis </p>
-			        <p>Private Key 	:   5JMGJkJyFrnKaqEw83gpKkzbMcP3PtAa6sdNBngTEFxqQRNSzK2 </p>
-
-		</div>
-	    <div class="proj-box-format">
-			        <iframe src="https://sajumulakkal.netlify.app/assets/img/slabs_stripe.JPG" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen align="middle" seamless></iframe>
-		</div>
-		<div class="proj-box-format">
-					<a href="http://34.125.10.220:3000/profile" target="_blank">Click Here for "sLabs Ecommerce Site", Website was build using Mongo DB/Elastic Search/Strip for Credit Card Payment </a>
-					<p>Login :   sajumulakkal@hotmail.com </p>
-					<p>Password	:   saju </p>
-
-	  	</div>
-	  	<div class="proj-box-format">
-					        <iframe src="https://slabs-coin-stake-unstake-in-dapp-tokenfarm.netlify.app/" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen align="middle" seamless></iframe>
-		</div>
-				<div class="proj-box-format">
-							<a href="https://slabs-coin-stake-unstake-in-dapp-tokenfarm.netlify.app/" target="_blank">Click Here for "sLabs Coin Stake/Un-stake ", Website was build using Eitherium Platform - Smart Contract is written in Solidity  </a>
-							<p>Please connect Via MetaMask Wallet</p>
-
-
-	  	</div>
-	  	<div class="proj-box-format">
-					        <iframe src="https://slabs-digital-currency-sentiment.netlify.app/" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen align="middle" seamless></iframe>
-		</div>
-				<div class="proj-box-format">
-							<a href="https://slabs-digital-currency-sentiment.netlify.app/" target="_blank">Click Here for "sLabs Vote for digital currency sentiment", Website was build using Eitherium & Moralis Platform - Smart Contract is written in Solidity, Contract Events are captured in Moralis server  </a>
-							<p>Please connect Via MetaMask Wallet</p>
-
-
-	  	</div>
 
 	  	<div class="proj-box-format">
 	      <iframe src="https://my-kitchen-recipes.netlify.app/" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen align="middle" seamless></iframe>
