--- a/index.html
+++ b/index.html
@@ -333,87 +333,14 @@
 		</div>
         <div class="container">
 		<table class='table table-bordered table-condensed table-striped table-hover'>
-		<tr><th>Professional Certificates</th></tr>
-		 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/professional-cert/93KGK95GTN7G"><td>IBM AI Engineering</td></tr>
-		 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/professional-cert/W3645GVM53EH"><td>IBM Data Science</td></tr>
-		 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/professional-cert/YGGKYXXSNN6S"><td>IBM Cybersecurity Analyst</td></tr>
-		 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/professional-cert/PHAFPPXW7WT9"><td>Cloud Architecture with Google Cloud</td></tr>
-		 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/professional-cert/FBDYHYFDBZWL"><td>SRE and DevOps Engineer with Google Cloud</td></tr>
-		 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/professional-cert/797D4KUGFFFL"><td>Cloud Engineering with Google Cloud</td></tr>
- 	<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/professional-cert/PHK5H6TGMK7R"><td>Data Engineering with Google Cloud</td></tr>
- 	<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/professional-cert/HNQERPT64N4J"><td>Google Data Analytics</td></tr>
-		</table>
-		<table class='table table-bordered table-condensed table-striped table-hover'>
-				 <tr><th>Specialization Certificates</th></tr>
-				 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/specialization/2U49YBK29G9T"><td>Advanced Machine Learning with TensorFlow on Google Cloud Platform</td></tr>
-				 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/specialization/7AX6WUPWNFT3"><td>Networking in Google Cloud</td></tr>
-				 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/specialization/GPQR7PN92PCU"><td>Machine Learning with TensorFlow on Google Cloud Platform</td></tr>
-				 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/specialization/ZLSPQUNSS3TB"><td>Data Engineering, Big Data, and Machine Learning on GCP</td></tr>
-				 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/specialization/EW6VNGMBVWHR"><td>Developing Applications with Google Cloud Platform</td></tr>
+		 <tr><th>Specialization Certificates</th></tr>
 				 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/specialization/certificate/JJGXZ6QCKVNL"><td>Google UX Design</td></tr>
 
 		</table>
 		<table class='table table-bordered table-condensed table-striped table-hover'>
-						 <tr><th>Credly Verified Badges for AWS, IBM & Google</th></tr>
+						 <tr><th>Credly Verified Badges for Google</th></tr>
 						 <tr class="table-row"data-href="https://www.credly.com/users/saju-mulakkal-joseph/badges?sort=-state_updated_at&page=1"><td>Credly</td></tr>
 	 <tr><th>Google Badges</th></tr>
-						 <tr class="table-row"data-href="https://googlecourses.qwiklabs.com/public_profiles/eff1f53f-fca4-4952-aaf4-b6aab626c280"><td>Google</td></tr>
-			<tr><th>AWS</th></tr>
-		<tr class="table-row"data-href="https://www.credly.com/badges/974a4177-8f0d-4d3e-953d-4eb1c4c6017f"><td>AWS Certified Cloud Practitioner</td></tr>
-
-		</table> 
-	<tr><th>Pluralsight Badges</th></tr>
-						 <tr class="table-row"data-href="https://app.pluralsight.com/profile/saju-joseph-33 "><td>Pluralsight</td></tr>
-		</table>
-		<table class='table table-bordered table-condensed table-striped table-hover'>
-								 <tr><th>John Hopkins University</th></tr>
-								 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/UVPF2HEGKHFJ"><td>COVID-19 Contact Tracing</td></tr>
-
-		</table>
-		<table class='table table-bordered table-condensed table-striped table-hover'>
-		<tr><th>INSEAD</th></tr>
-		<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/WQWG65VZDRXU"><td>Blockchain Technologies</td></tr>
-
-		</table>
-		<table class='table table-bordered table-condensed table-striped table-hover'>
-		<tr><th>The Hong Kong University of Science and Technology</th></tr>
-        <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/N4B2HWSW58J8"><td>FinTech Foundations and Overview</td></tr>
-		</table>
-
-		<table class='table table-bordered table-condensed table-striped table-hover'>
-		<tr><th>University of Cape Town</th></tr></th></tr>
-		<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/specialization/ZUXGGAP847J6"><td>Fintech Startups in Emerging Markets</td></tr>
-		</table>
-
-		<table class='table table-bordered table-condensed table-striped table-hover'>
-		<tr><th>ITIL</th></tr></th></tr>
-		<tr class="table-row"data-href="https://candidate.peoplecert.org/MobileReports.aspx?id=20E5673CE3D9A78276C18ED45430651B047D6D5B69A1C00A8381283CFDC70496B4D1BE6C0F53F998D3F07C07884661A96E423719D1EE36D248C84A03F205EC1C346A93560A461D8384CA69681F9CE4D2991BEF138AE9D2CA61F86CFBB1C61584293E9DC16F177925880A1CA139CECB2ED9A1E700F6267809"><td>
-ITIL  Intermediate Certificate in IT Operational Support and Analysis</td></tr>
-		<tr class="table-row"data-href="
-https://candidate.peoplecert.org/MobileReports.aspx?id=C7D6768D3D8E22B4E0D76591A9C341A98DAA84E7062AD4392666203B4F0D903EBAE5DA29B3C5E7FAC52C97405E6883DE595F5BB8F64C3F8B30971187ECB74D4D8ED575F6514B7D8E4643ED4117CDE082EA16E3A93DD2048DB5857C59C07739BF6CE79D5CB6DD47536466B83C75FA6D0DC65E1FD5100A705F"><td>
-ITIL  Intermediate Certificate in IT Continual Service Improvement</td></tr>
-		<tr class="table-row"data-href="
-https://sajumulakkal.netlify.app/assets/pdf/Session_127223_Certificate_foundation.pdf"><td>
-ITIL  Foundation Certificate</td></tr>
-		</table>
-		</div>
-		<div>
-		<table class='table table-bordered table-condensed table-striped table-hover'>
-		<tr><th>NUS -National University of Singapore &  Asian Institute of Digital Finance (AIDF) </th></tr></th></tr>
-		<tr class="table-row"data-href="https://sff.apixoxygen.com/certificate/fad9a89341bf426f8a277e9b102152c6"><td>
-Designing Financial Services on Web 3.0</td></tr>
-		<tr class="table-row"data-href="
-https://sff.apixoxygen.com/certificate/504f62ec77f548059853447d3a3f9921"><td>
-Building Financial Services on Web 3.0</td></tr>
-		<tr class="table-row"data-href="
-https://sff.apixoxygen.com/certificate/ed4f36ec3f394cae83a1a5afd771dc46"><td>
-Sustainable Financial Services on Web 3.0</td></tr>
-		<tr class="table-row"data-href="
-https://sff.apixoxygen.com/certificate/8f37338475ad43d98d5b8e65b394aabd"><td>
-Web 3.0 Knowledge Certificate in Financial Services</td></tr>
-		</table>
-		</div>
-
 		<div>
    	     <table class='table table-bordered table-condensed table-striped table-hover'>
 		<tr><th>Duke University</th></tr></th></tr>
@@ -447,8 +374,7 @@ Decentralized Finance (DeFi) Opportunities and Risks</td></tr>
 	          <h2>Learning Works</h2>
 	        </div>
 	<div>
-	    <h2 class="text-center pad-section">These websites are developed to demonstrate my skills in Web /REACT/ Block chain Technologies....
-	    These Sites are not commerical purpose , only for understanding the concepts - Thanks to EOSIO for building blockchain platform and allowing us to use the platform..</h2>
+	    <h2 class="text-center pad-section">These websites are developed to demonstrate my skills in HTMl/CSS/Python-Flask..</h2>
 
 
         <div>
