--- a/index.html
+++ b/index.html
@@ -326,11 +326,7 @@
           <h2>Certification</h2>
         </div>
 
-		<div>
 
-		      <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:6723603780740497408" height="700" width="350" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
-
-		</div>
         <div class="container">
 		<table class='table table-bordered table-condensed table-striped table-hover'>
 		 <tr><th>Specialization Certificates</th></tr>
@@ -340,10 +336,9 @@
 		<table class='table table-bordered table-condensed table-striped table-hover'>
 						 <tr><th>Credly Verified Badges for Google</th></tr>
 						 <tr class="table-row"data-href="https://www.credly.com/users/saju-mulakkal-joseph/badges?sort=-state_updated_at&page=1"><td>Credly</td></tr>
-	 <tr><th>Google Badges</th></tr>
 		<div>
    	     <table class='table table-bordered table-condensed table-striped table-hover'>
-		<tr><th>Duke University</th></tr></th></tr>
+		<tr><th>Google UX</th></tr></th></tr>
 		<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/specialization/certificate/MW3MRP8955RA"><td>
 Decentralized Finance (DeFi): The Future of Finance </td></tr>
 	<tr class="table-row"data-href="
