--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
         <h1 class="text-light"><a href="index.html">Rosemol Saju</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://wa.me/6580343546" class="twitter"><i class="bx bxl-whatsapp"></i></a>
-          <a href="https://www.facebook.com/saju.m.joseph" class="facebook"><i class="bx bxl-facebook"></i></a>
         </div>
       </div>
 
@@ -218,8 +217,8 @@
               <p><em>Innovative and result oriented Application Support Engineer with 24+ years of IT experience in various Information Technologies.</em></p>
               <ul>
                 <li>Simei, Singapore</li>
-                <li>+65-98627561</li>
-                <li>sajumulakkal@hotmail.com</li>
+                <li>+65-80343546</li>
+                <li>rosemolsaju05@gmail.com</li>
               </ul>
             </div>
 
@@ -420,19 +419,19 @@ Decentralized Finance (DeFi) Opportunities and Risks</td></tr>
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>BLK 18,#02-08, Singapore 529943</p>
+                <p>Singapore</p>
               </div>
 
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>sajumulakkal@hotmail.com</p>
+                <p>rosemolsaju05@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+65 98627561</p>
+                <p>+65 80343546</p>
               </div>
 
               <iframe src="" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
@@ -484,7 +483,7 @@ Decentralized Finance (DeFi) Opportunities and Risks</td></tr>
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span> sLabs & </span></strong><a href="https://www.KarmaCoins.info">KarmaCoins </a>
+        &copy; Copyright <strong><span> RoseLabs & </span></strong><a href="https://rosemol.netlify.app">Rose Labs </a>
       </div>
 
     </div>
