--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Rosemol Saju</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://wa.me/6580343546" class="twitter"><i class="bx bxl-whatsapp"></i></a>
+          <a href="https://wa.me/6584232773" class="twitter"><i class="bx bxl-whatsapp"></i></a>
         </div>
       </div>
 
@@ -123,7 +123,7 @@
         <div class="section-title">
           <h2>Skills</h2>
           <p>
-          Well versed with SQL and No-SQL Database/Data Science/Cloud/Blockchain & Cyber Securities Technologies...
+          Well versed with HTML/CSS/Python FLask Technologies...
           </p>
         </div>
 
@@ -132,60 +132,20 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">SQL DB (Oracle/Sybase/MySQL/SQL Server/Informix/Inetgra)  <i class="val">90%</i></span>
+              <span class="skill">HTML/CSS  <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">No SQL (Marklogic/Endeca/Firebase/Intersystems Cache/SPLUNK) <i class="val">75%</i></span>
+              <span class="skill">Python FLask Web development <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
-            <div class="progress">
-              <span class="skill">Scripting Language (JavaScript/Perl/Python )<i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-                        <div class="progress">
-			              <span class="skill">Blockchain- Ethereum Solidity, EOSIO BlockOne , Moralis  <i class="val">75%</i></span>
-			              <div class="progress-bar-wrap">
-			                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-			              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-
-            <div class="progress">
-              <span class="skill">Web Platform-IIS/Apache(LAMP), WebLogic, Iplanet, L3, Akamai,IFA  <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Cloud Platform -GCP ( Google ) / AWS /IBM Bluiemix & Watson <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Testing Tools -Rational Robot/Win & Load Runner/JUNIT/Selenium <i class="val">65%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
+  
 
       </div>
     </section><!-- End Skills Section -->
@@ -511,8 +471,8 @@ Decentralized Finance (DeFi) Opportunities and Risks</td></tr>
 <script type="text/javascript">
     (function () {
         var options = {
-            whatsapp: "+6598627561", // WhatsApp number
-            call_to_action: "Message To Saju", // Call to action
+            whatsapp: "+6584232773", // WhatsApp number
+            call_to_action: "Message To Rosemol34", // Call to action
             position: "right", // Position may be 'right' or 'left'
         };
         var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
