--- a/index.html
+++ b/index.html
@@ -294,24 +294,35 @@
 		</table>
 		<table class='table table-bordered table-condensed table-striped table-hover'>
 						 <tr><th>Credly Verified Badges for Google</th></tr>
-						 <tr class="table-row"data-href="https://www.credly.com/users/saju-mulakkal-joseph/badges?sort=-state_updated_at&page=1"><td>Credly</td></tr>
+						 <tr class="table-row"data-href="https://www.credly.com/badges/2a3600cd-4a59-48bc-bc9c-005166df7acc/public_url"><td>Credly</td></tr>
 		<div>
    	     <table class='table table-bordered table-condensed table-striped table-hover'>
 		<tr><th>Google UX</th></tr></th></tr>
-		<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/specialization/certificate/MW3MRP8955RA"><td>
-Decentralized Finance (DeFi): The Future of Finance </td></tr>
+		<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/3KJ4CQ6SKLUK"><td>
+Build Dynamic User Interfaces (UI) for Websites </td></tr>
 	<tr class="table-row"data-href="
 https://www.coursera.org/account/accomplishments/verify/TFKFSQTY3SBA"><td>
-Decentralized Finance (DeFi) Infrastructure</td></tr>
+Conduct UX Research and Test Early Concepts</td></tr>
 		<tr class="table-row"data-href="
-https://www.coursera.org/account/accomplishments/verify/CYPNJYTNZACD"><td>
-Decentralized Finance (DeFi) Primitives</td></tr>
+https://www.coursera.org/account/accomplishments/verify/9UH4SA7FTSMJ"><td>
+Create High-Fidelity Designs and Prototypes in Figma</td></tr>
 		<tr class="table-row"data-href="
-https://www.coursera.org/account/accomplishments/verify/JFXPS7S8WQ5Z"><td>
-Decentralized Finance (DeFi) Deep Dive</td></tr>
+https://www.coursera.org/account/accomplishments/verify/FD4X7MNG7MNP"><td>
+Design a User Experience for Social Good & Prepare for Jobs</td></tr>
 		<tr class="table-row"data-href="
-https://www.coursera.org/account/accomplishments/verify/EPHVASDT7XRF"><td>
-Decentralized Finance (DeFi) Opportunities and Risks</td></tr>
+https://www.coursera.org/account/accomplishments/verify/J3LHVDTJ7M82">
+<td>Build Wireframes and Low-Fidelity Prototypes</td></tr>
+
+		<tr class="table-row"data-href="
+https://www.coursera.org/account/accomplishments/verify/5H35CGK8BUY7"><td>
+Foundations of User Experience (UX) Design</td></tr>
+		<tr class="table-row"data-href="
+https://www.coursera.org/account/accomplishments/verify/L3MHEK5R949S"><td>
+Start the UX Design Process: Empathize, Define, and Ideate</td></tr>
+
+		<tr class="table-row"data-href="
+https://www.coursera.org/account/accomplishments/verify/J3LHVDTJ7M82"><td>
+Build Wireframes and Low-Fidelity Prototypes</td></tr>
 		</table>
 		</div>
 
