--- a/index.html
+++ b/index.html
@@ -156,16 +156,9 @@
 
         <div class="section-title">
           <h2>Resume</h2>
+
           <p>
-          <a href="https://docs.google.com/presentation/d/1E8Wc11QYn5LlLx8IqqLnoKEu5-KiBCGEPpeGTgGh3dE/view#slide=id.g130a4beb044_2_57" target="_blank">One Page CV in Browser</a>
-          </p>
-          <br>
-          <p>
-          <a href="https://sajumulakkal.netlify.app/assets/pdf/SMJ_1page_CV.pdf" target="_blank">One Page CV in PDF</a>
-          </p>
-        <br>
-          <p>
-          <a href="https://sajumulakkal.netlify.app/assets/pdf/SajuMulakkalJoseph.pdf" target="_blank">Detailed CV in PDF</a>
+          <a href="https://rosemol.netlify.app/assets/pdf/rosemol_cv.pdf" target="_blank">One Page CV in PDF</a>
           </p>
         </div>
 
@@ -173,8 +166,8 @@
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
-              <h4>Saju Mulakkal Joseph</h4>
-              <p><em>Innovative and result oriented Application Support Engineer with 24+ years of IT experience in various Information Technologies.</em></p>
+              <h4>Rosemol Saju</h4>
+              <p><em>Young learner on Information Technologies.</em></p>
               <ul>
                 <li>Simei, Singapore</li>
                 <li>+65-80343546</li>
@@ -183,92 +176,25 @@
             </div>
 
             <h3 class="resume-title">Education</h3>
+ 
             <div class="resume-item">
-              <h4>Master of Business Admistration </h4>
-              <h5>2003 - 2005</h5>
-              <p><em>
-				Sikkim Manipal University of Health, Medical and Technological Sciences  </em></p>
-              <p></p>
-            </div>
-            <div class="resume-item">
-			              <h4>Post Graduate Diploma in Computer Applications</h4>
-			              <h5>1994 - 1995</h5>
-			              <p><em>IHRDE, Kerala</em></p>
+			              <h4>Singapore Cambridge - A level Graduate</h4>
+			              <h5>2021 - 2023</h5>
+			              <p><em>T=Ysihun Innova Jr College</em></p>
 			              <p></p>
             </div>
-            <div class="resume-item">
-              <h4>Bachelor of Physiscs</h4>
-              <h5>1991 - 1994</h5>
-              <p><em>Calicut University</em></p>
-              <p></p>
-            </div>
+ 
           </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Professional Experience</h3>
-                    <div class="resume-item">
-			              <h4>Appl & Cloud Support Manager </h4>
-			              <h5>2018 - Present</h5>
-			              <p><em>Accenture , Singapore</em></p>
-			              <ul>
-			                <li></li>
-			              </ul>
-            </div>
             <div class="resume-item">
-              <h4>Senior Technical Lead for Application Support</h4>
-              <h5>2006 - Present</h5>
-              <p><em>Credit Suisse , Singapore</em></p>
+              <h4>Software Tester</h4>
+              <h5>2021-Jan to 2021 Feb </h5>
+              <p><em>GUUD International , Singapore</em></p>
               <ul>
                 <li></li>
                  </ul>
             </div>
-            <div class="resume-item">
-              <h4>QA Lead -2</h4>
-              <h5>2005  - 2006</h5>
-              <p><em>SumTotal Systems, Hyderabad</em></p>
-              <ul>
-                <li></li>
-              </ul>
-            </div>
-            <div class="resume-item">
-			              <h4>System Analyst</h4>
-			              <h5>2003  - 2005</h5>
-			              <p><em>GE Information Technology Center- Fanuc, Hyderabad</em></p>
-			              <ul>
-			                <li></li>
-			               </ul>
-            </div>
-            <div class="resume-item">
-						              <h4>SQA Team Lead</h4>
-						              <h5>2002  - 2003</h5>
-						              <p><em>ADP India Pvt Ltd, Hyderabad</em></p>
-						              <ul>
-						                <li></li>
-						              </ul>
-            </div>
-                        <div class="resume-item">
-									              <h4>Sr Software Engineer</h4>
-									              <h5>1999  - 2002</h5>
-									              <p><em>Satyam Software Services, Hyderabad</em></p>
-									              <ul>
-									                <li></li>
-									              </ul>
-            </div>
-                                    <div class="resume-item">
-												              <h4>System Analyst</h4>
-												              <h5>1996  - 1999</h5>
-												              <p><em>Kale Consultants Pvt Ltd, Pune</em></p>
-												              <ul>
-												                <li></li>
-												              </ul>
-            </div>
-                                     <div class="resume-item">
-															              <h4>Programmer</h4>
-															              <h5>1995  - 1996</h5>
-															              <p><em>India Publications, Mumbai</em></p>
-															              <ul>
-															                <li></li>
-															              </ul>
-            </div>
+   
+
           </div>
         </div>
       </div>
