--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <h2>Resume</h2>
 
           <p>
-          <a href="https://rosemol.netlify.app/assets/pdf/rosemol_cv.pdf" target="_blank">One Page CV in PDF</a>
+          <a href="https://rosemol.netlify.app/assets/pdf/Rosemol_Resume.pdf" target="_blank">Rosemol -CV</a>
           </p>
         </div>
 
@@ -180,7 +180,7 @@
             <div class="resume-item">
 			              <h4>Singapore Cambridge - A level Graduate</h4>
 			              <h5>2021 - 2023</h5>
-			              <p><em>T=Ysihun Innova Jr College</em></p>
+			              <p><em>Yishun Innova Junior College</em></p>
 			              <p></p>
             </div>
  
@@ -188,7 +188,7 @@
             <div class="resume-item">
               <h4>Software Tester</h4>
               <h5>2021-Jan to 2021 Feb </h5>
-              <p><em>GUUD International , Singapore</em></p>
+              <p><em>GUUD (International) Pte. Ltd , Singapore</em></p>
               <ul>
                 <li></li>
                  </ul>
