--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="section-title">
           <h2>About </h2>
           <p>
-          I am learning Skills on Web Development, Datat Analysis and UX Buding
+          I am learning Skills on Web Page & UX Development, Data Analysis and UX Building
           </p>
         </div>
 
@@ -88,7 +88,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Application Suppoprt Engineer & Businesss/Data Analyst</h3>
+            <h3>Software Tester  & Web Page Builder</h3>
             <p class="font-italic">
             </p>
             <div class="row">
@@ -402,7 +402,7 @@ Start the UX Design Process: Empathize, Define, and Ideate</td></tr>
     (function () {
         var options = {
             whatsapp: "+6584232773", // WhatsApp number
-            call_to_action: "Message To Rosemol34", // Call to action
+            call_to_action: "Message To Rosemol", // Call to action
             position: "right", // Position may be 'right' or 'left'
         };
         var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
