--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ Start the UX Design Process: Empathize, Define, and Ideate</td></tr>
 	      <iframe src="https://rosemol-kitchen.netlify.app/" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen align="middle" seamless></iframe>
 		</div>
 		<div class="proj-box-format">
-		<a href="https://my-kitchen-recipes.netlify.app/" target="_blank">Click Here for "My Kitchen Recipes", Website builded wih Python Flask</a>
+		<a href="https://rosemol-kitchen.netlify.app/" target="_blank">Click Here for "Rosemol Kitchen", Website builded wih Python Flask</a>
 	  	</div>
  	      <div class="proj-box-format">
 	      <iframe src="https://sajumulakkal-3d-apps.netlify.app/" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen align="middle" seamless></iframe>
