--- a/index.html
+++ b/index.html
@@ -263,11 +263,11 @@ Start the UX Design Process: Empathize, Define, and Ideate</td></tr>
 
         <div>
 	    <div class="proj-box-format">
-	        <iframe id="scaled-frame"  src="https://slabs-travel-site.netlify.app/" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen align="middle" seamless></iframe>
+	        <iframe id="scaled-frame"  src="https://rosemol-travel-site.netlify.app/" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen align="middle" seamless></iframe>
 	    </div>
 
 	   <div class="proj-box-format">
-		   	<a href="https://slabs-travel-site.netlify.app/" target="_blank">Click Me Here for "Clear View Escapes", Website was build using HTML and CSS</a>
+		   	<a href="https://rosemol-travel-site.netlify.app/" target="_blank">Click Me Here for "Clear View Escapes", Website was build using HTML and CSS</a>
 	    </div>
        </div>
 
