--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ Start the UX Design Process: Empathize, Define, and Ideate</td></tr>
 	    </div>
 
 	   <div class="proj-box-format">
-		   	<a href="https://rosemol-travel-site.netlify.app/" target="_blank">Click Me Here for "Clear View Escapes", Website was build using HTML and CSS</a>
+		   	<a href="https://rosemol-travel-site.netlify.app/" target="_blank">Click Me Here for "Rosenmol Travel -Clear View Escapes", Website was build using HTML and CSS</a>
 	    </div>
        </div>
 
