--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Python FLask Web development <i class="val">75%</i></span>
+              <span class="skill">Python Flask Web development <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -278,12 +278,6 @@ Start the UX Design Process: Empathize, Define, and Ideate</td></tr>
 		</div>
 		<div class="proj-box-format">
 		<a href="https://rosemol-kitchen.netlify.app/" target="_blank">Click Here for "Rosemol Kitchen", Website builded wih Python Flask</a>
-	  	</div>
- 	      <div class="proj-box-format">
-	      <iframe src="https://sajumulakkal-3d-apps.netlify.app/" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen align="middle" seamless></iframe>
-		</div>
-		<div class="proj-box-format">
-		<a href="https://sajumulakkal-3d-apps.netlify.app/" target="_blank">Click Here for "3D Sites", Website builded wih REACT and VITE</a>
 	  	</div>
 	<div>
 
