--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#Certification"><i class="bx bx-server"></i>Certification</a></li>
           <li><a href="#Learnings"><i class="bx bx-book-content"></i> Learning Works</a></li>
+          <li><a href="#Volunteer"><i class="bx bx-book-content"></i> Volunteer Service</a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i>Contact</a></li>
 
         </ul>
@@ -241,6 +242,43 @@ Foundations of User Experience (UX) Design</td></tr>
 		<tr class="table-row"data-href="
 https://www.coursera.org/account/accomplishments/verify/L3MHEK5R949S"><td>
 Start the UX Design Process: Empathize, Define, and Ideate</td></tr>
+
+		</table>
+		</div>
+
+
+
+    </div>
+    </section><!-- End Certification Section -->
+
+
+    <!-- ======= Volunteer Section ======= -->
+    <section id="Volunteer" class="services">
+
+    <div class="container">
+
+        <div class="section-title">
+          <h2>Volunteer Service</h2>
+        </div>
+
+
+        <div class="container">
+
+		<table class='table table-bordered table-condensed table-striped table-hover'>
+						 <tr><th>Volunteer Service</th></tr>
+						 <tr class="table-row"data-href="https://www.credly.com/badges/2a3600cd-4a59-48bc-bc9c-005166df7acc/public_url"><td>Volunteer Service</td></tr>
+		<div>
+   	     <table class='table table-bordered table-condensed table-striped table-hover'>
+		<tr><th>Volunteer Service</th></tr></th></tr>
+		<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/3KJ4CQ6SKLUK"><td>
+Build Dynamic User Interfaces (UI) for Websites </td></tr>
+	<tr class="table-row"data-href="
+https://www.coursera.org/account/accomplishments/verify/TFKFSQTY3SBA"><td>
+Conduct UX Research and Test Early Concepts</td></tr>
+		<tr class="table-row"data-href="
+https://www.coursera.org/account/accomplishments/verify/9UH4SA7FTSMJ"><td>
+Create High-Fidelity Designs and Prototypes in Figma</td></tr>
+		<tr class="table-row"data-href="
 
 		</table>
 		</div>
