--- a/index.html
+++ b/index.html
@@ -266,19 +266,16 @@ Start the UX Design Process: Empathize, Define, and Ideate</td></tr>
 
 		<table class='table table-bordered table-condensed table-striped table-hover'>
 						 <tr><th>Volunteer Service</th></tr>
-						 <tr class="table-row"data-href="https://www.credly.com/badges/2a3600cd-4a59-48bc-bc9c-005166df7acc/public_url"><td>Volunteer Service</td></tr>
+						 <tr class="table-row"data-href="https://rosemol.netlify.app/assets/img/cameratrap.jpg"><td>Iberian Camera Trap Project</td></tr>
 		<div>
+
    	     <table class='table table-bordered table-condensed table-striped table-hover'>
 		<tr><th>Volunteer Service</th></tr></th></tr>
-		<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/3KJ4CQ6SKLUK"><td>
-Build Dynamic User Interfaces (UI) for Websites </td></tr>
+		<tr class="table-row"data-href="https://rosemol.netlify.app/assets/img/Penguin.jpg"><td>Penguin Watch </td></tr>
 	<tr class="table-row"data-href="
-https://www.coursera.org/account/accomplishments/verify/TFKFSQTY3SBA"><td>
-Conduct UX Research and Test Early Concepts</td></tr>
-		<tr class="table-row"data-href="
-https://www.coursera.org/account/accomplishments/verify/9UH4SA7FTSMJ"><td>
-Create High-Fidelity Designs and Prototypes in Figma</td></tr>
-		<tr class="table-row"data-href="
+https://rosemol.netlify.app/assets/img/seabird.jpg"><td>
+Seabird Watch</td></tr>
+	
 
 		</table>
 		</div>
