--- a/index.html
+++ b/index.html
@@ -262,12 +262,7 @@ Start the UX Design Process: Empathize, Define, and Ideate</td></tr>
         </div>
 
 
-        <div class="container">
 
-		<table class='table table-bordered table-condensed table-striped table-hover'>
-						 <tr><th>Volunteer Service</th></tr>
-						 <tr class="table-row"data-href="https://rosemol.netlify.app/assets/img/cameratrap.jpg"><td>Iberian Camera Trap Project</td></tr>
-		<div>
 
    	     <table class='table table-bordered table-condensed table-striped table-hover'>
 		<tr><th>Volunteer Service</th></tr></th></tr>
@@ -275,6 +270,9 @@ Start the UX Design Process: Empathize, Define, and Ideate</td></tr>
 	<tr class="table-row"data-href="
 https://rosemol.netlify.app/assets/img/seabird.jpg"><td>
 Seabird Watch</td></tr>
+	<tr class="table-row"data-href="
+https://rosemol.netlify.app/assets/img/cameratrap.jpg"><td>
+Iberian Camera Trap Project</td></tr>
 	
 
 		</table>
