--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ Start the UX Design Process: Empathize, Define, and Ideate</td></tr>
 
 
    	     <table class='table table-bordered table-condensed table-striped table-hover'>
-		<tr><th>Volunteer Service</th></tr></th></tr>
+		<tr><th>Volunteer Services @ zooniverse</th></tr></th></tr>
 		<tr class="table-row"data-href="https://rosemol.netlify.app/assets/img/Penguin.jpg"><td>Penguin Watch </td></tr>
 	<tr class="table-row"data-href="
 https://rosemol.netlify.app/assets/img/seabird.jpg"><td>
