--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
 		<table class='table table-bordered table-condensed table-striped table-hover'>
 						 <tr><th>Credly Verified Badges for Google</th></tr>
 						 <tr class="table-row"data-href="https://www.credly.com/badges/2a3600cd-4a59-48bc-bc9c-005166df7acc/public_url"><td>Google UX design</td></tr>
+						 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/specialization/E97X3WB8J8BH"><td>Google UX design Certificate </td></tr>
 		<div>
    	     <table class='table table-bordered table-condensed table-striped table-hover'>
 		<tr><th>Google UX</th></tr></th></tr>
@@ -293,16 +294,6 @@ Iberian Camera Trap Project</td></tr>
 	<div>
 	    <h2 class="text-center pad-section">These websites are developed to demonstrate my skills in HTMl/CSS/Python-Flask..</h2>
 
-
-        <div>
-	    <div class="proj-box-format">
-	        <iframe id="scaled-frame"  src="https://rosemol-travel-site.netlify.app/" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen align="middle" seamless></iframe>
-	    </div>
-
-	   <div class="proj-box-format">
-		   	<a href="https://rosemol-travel-site.netlify.app/" target="_blank">Click Me Here for "Rosemol Travel -Clear View Escapes", Website was build using HTML and CSS</a>
-	    </div>
-       </div>
 
 
 
