--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 		<table class='table table-bordered table-condensed table-striped table-hover'>
 						 <tr><th>Credly Verified Badges for Google</th></tr>
 						 <tr class="table-row"data-href="https://www.credly.com/badges/2a3600cd-4a59-48bc-bc9c-005166df7acc/public_url"><td>Google UX design</td></tr>
-						 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/specialization/E97X3WB8J8BH"><td>Google UX design Certificate </td></tr>
+						 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/specialization/E97X3WB8J8BH"><td>Google Certificate </td></tr>
 		<div>
    	     <table class='table table-bordered table-condensed table-striped table-hover'>
 		<tr><th>Google UX</th></tr></th></tr>
