--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           <li><a href="#Certification"><i class="bx bx-server"></i>Certification</a></li>
           <li><a href="#Learnings"><i class="bx bx-book-content"></i> Learning Works</a></li>
           <li><a href="#Volunteer"><i class="bx bx-book-content"></i> Volunteer Service</a></li>
+          <li><a href="#ArtWorks"><i class="bx bx-book-content"></i>My Art Works</a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i>Contact</a></li>
 
         </ul>
@@ -298,8 +299,7 @@ Iberian Camera Trap Project</td></tr>
 
 
    	     <table class='table table-bordered table-condensed table-striped table-hover'>
-		<tr><th>My Art Works
-/th></tr></th></tr>
+
 		<tr class="table-row"data-href="https://photos.app.goo.gl/X8KHCjp4nxo4k89NA"><td> My Art Works</td></tr>		
 
 		</table>
