--- a/index.html
+++ b/index.html
@@ -245,6 +245,11 @@ Foundations of User Experience (UX) Design</td></tr>
 https://www.coursera.org/account/accomplishments/verify/L3MHEK5R949S"><td>
 Start the UX Design Process: Empathize, Define, and Ideate</td></tr>
 
+<tr><th>CourseEra Certificates</th></tr>
+		<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/4CVUE87K6LB7"><td>
+Introduction to Generative AI </td></tr>
+
+
 		</table>
 		</div>
 
