--- a/index.html
+++ b/index.html
@@ -245,9 +245,13 @@ Foundations of User Experience (UX) Design</td></tr>
 https://www.coursera.org/account/accomplishments/verify/L3MHEK5R949S"><td>
 Start the UX Design Process: Empathize, Define, and Ideate</td></tr>
 
-<tr><th>CourseEra Certificates</th></tr>
+<tr><th>Coursera Certificates</th></tr>
 		<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/4CVUE87K6LB7"><td>
 Introduction to Generative AI </td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/A5ZH8FXQYQAP"><td>
+Financial Markets </td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/7CJ3PCQL5NWX"><td>
+Applied ChatGPT for Cybersecurity </td></tr>
 
 
 		</table>
