--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Singapore -Cambridge A level Graduate</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Pre-University:</strong> Singapore -Cambridge A level Graduate</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> rosemolsaju05@gmail.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong>in progress </li>
                 </ul>
