--- a/index.html
+++ b/index.html
@@ -218,8 +218,11 @@
 
 		<table class='table table-bordered table-condensed table-striped table-hover'>
 						 <tr><th>Credly Verified Badges for Google</th></tr>
-						 <tr class="table-row"data-href="https://www.credly.com/badges/2a3600cd-4a59-48bc-bc9c-005166df7acc/public_url"><td>Google UX design</td></tr>
-						 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/specialization/E97X3WB8J8BH"><td>Google Certificate </td></tr>
+						 <tr class="table-row"data-href="https://www.credly.com/badges/2a3600cd-4a59-48bc-bc9c-005166df7acc/public_url"><td>Google UX Design Professional Certificate</td></tr>
+						 <tr class="table-row"data-href="https://www.credly.com/badges/3e472f8f-3dae-47d2-b12c-0771966ac9da/public_url"><td>Google Data Analytics Professional Certificate</td></tr>
+
+						 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/specialization/E97X3WB8J8BH"><td>Google Certificate -Google UX design</td></tr>
+						 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/professional-cert/K3X52CSDN47M"><td>Google Certificate -Google Data Analytics</td></tr>
 		<div>
    	     <table class='table table-bordered table-condensed table-striped table-hover'>
 		<tr><th>Google UX</th></tr></th></tr>
@@ -252,6 +255,25 @@ Introduction to Generative AI </td></tr>
 Financial Markets </td></tr>
 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/verify/7CJ3PCQL5NWX"><td>
 Applied ChatGPT for Cybersecurity </td></tr>
+</tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/8TB3MTA28TCG"><td>
+Ask Questions to Make Data-Driven Decisions </td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/HEWD6VT5RUPN"><td>
+Prepare Data for Exploration </td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/3JN7F49QSR6B"><td>
+Share Data Through the Art of Visualization </td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/J8WN5GPBTJF9"><td>
+Process Data from Dirty to Clean </td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/JGVBV8VWFJUV"><td>
+Google Data Analytics Capstone: Complete a Case Study </td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/BC537D3P8F64"><td>
+Foundations: Data, Data, Everywhere </td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/LB6A2EUCK3U6"><td>
+Analyze Data to Answer Questions </td></tr>
+<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/certificate/HNWCV58GJUEB"><td>
+Data Analysis with R Programming </td></tr>
+
+
 
 
 		</table>
