--- a/index.html
+++ b/index.html
@@ -217,11 +217,12 @@
         <div class="container">
 
 		<table class='table table-bordered table-condensed table-striped table-hover'>
-						 <tr><th>Credly Verified Badges for Google</th></tr>
+						 <tr><th>Credly Badges</th></tr>
 						 <tr class="table-row"data-href="https://www.credly.com/badges/2a3600cd-4a59-48bc-bc9c-005166df7acc/public_url"><td>Google UX Design Professional Certificate</td></tr>
 						 <tr class="table-row"data-href="https://www.credly.com/badges/3e472f8f-3dae-47d2-b12c-0771966ac9da/public_url"><td>Google Data Analytics Professional Certificate</td></tr>
 
-						 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/specialization/E97X3WB8J8BH"><td>Google Certificate -Google UX design</td></tr>
+ <tr><th>Google Certificates</th></tr>
+		<tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/specialization/E97X3WB8J8BH"><td>Google Certificate -Google UX design</td></tr>
 						 <tr class="table-row"data-href="https://www.coursera.org/account/accomplishments/professional-cert/K3X52CSDN47M"><td>Google Certificate -Google Data Analytics</td></tr>
 		<div>
    	     <table class='table table-bordered table-condensed table-striped table-hover'>
